--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -13,11 +13,12 @@ html, body {
 menu {
   border-radius: 0 1rem 1rem 0;
   background-color: silver;
-  height: justify;
+  font-size: 1.4rem;
   position: fixed;
+  height: 15rem;
   padding: 1rem;
   opacity: 0.5;
-  width: 5rem;
+  width: 7.5rem;
   left: 1rem;
   top: 1rem;
 }
